button and camera fix on mobile devices
button and camera fix on mobile devices

--- a/styles.css
+++ b/styles.css
@@ -14,9 +14,10 @@
   color: #333;
 }
 
-.btn-primary {
+.btn-primary, .btn-success {
   margin: 5px;
 }
+
 
 .form-group{
   margin-bottom: 0rem !important;
@@ -45,6 +46,9 @@
   box-shadow: 0 0 5px rgba(0, 0, 0, 0.1);
 }
 
+#start-camera, #stop-camera{
+  margin-bottom: 10px;
+}
 
 /* Default styles for video */
 #video {
@@ -73,9 +77,13 @@
     max-width: 90vw;
   }
   #video {
-    max-width: 200px;
+    width: 100%;
+    height: 100%;
+    max-width: 100%;
     box-shadow: 0px 0px 5px rgba(0, 0, 0, 0.2);
     border-radius: 5px;
     object-fit: cover;
+    margin-left: 0;
   }
+
 }
